--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,24 @@
+#nav-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 2vw;
+    box-sizing: border-box;
+    position: relative;
+}
+
+#sign-in {
+    flex: 0 0 auto;
+    width: 20%;
+    margin: 1vw 0;
+}
+
+nav {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
 
 ul {
     list-style-type: none;
@@ -5,36 +26,15 @@ ul {
     flex-direction: row;
     align-items: center;
 }
+
 ul li {
     font-size: calc(6px + 1vw);
     padding: 0;
-    margin: 1vw 5vw;
+    margin: 1vw 4vw;
+    white-space: nowrap;
 }
+
 #main-header {
     text-align: center;
     font-size: calc(8px + 1.4vw);
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#nav-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 0.5vw 5vw;
-  }
-
-nav {
-    display: flex;
-    justify-content: center;
-    flex-grow: 1;
-  }
-
-#sign-in {
-    margin: 0 0 0 2vw;
 }
