--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,19 @@
-#nav-bar {
+@font-face {
+    font-family: 'Whitney Book';
+    src: url('/fonts/whitneybook.otf') format('otf');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap; 
+}
+@font-face {
+    font-family: 'Whitney SemiBold';
+    src: url('/fonts/whitneysemibold.otf') format('otf');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap; 
+}
+
+/*#nav-bar {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -38,3 +53,4 @@ ul li {
     text-align: center;
     font-size: calc(8px + 1.4vw);
 }
+*/
