--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,16 @@
 @font-face {
-    font-family: 'Whitney Book';
-    src: url('/fonts/whitneybook.otf') format('otf');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap; 
+  font-family: "Whitney Book";
+  src: url("/fonts/whitneybook.otf") format("otf");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 @font-face {
-    font-family: 'Whitney SemiBold';
-    src: url('/fonts/whitneysemibold.otf') format('otf');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap; 
+  font-family: "Whitney SemiBold";
+  src: url("/fonts/whitneysemibold.otf") format("otf");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
 /*#nav-bar {
